plugins {
    id 'application'
    id 'antlr'
}

repositories {
    mavenCentral()
}

dependencies {
    antlr "org.antlr:antlr4:4.7.2"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation libs.guava
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}


generateGrammarSource {
    arguments += ["-package", "cps450", "-visitor"]
}

application {
    mainClass = 'cps450.Main'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
